force-app/main/default/objects/User/fields/Dealing_in_Categories__c.field-meta.xml
<CustomField>
    <fullName>Dealing_in_Categories__c</fullName>
    <label>Dealing in Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Categories</valueSetName>
    </valueSet>
</CustomField>