force-app/main/default/objects/User/fields/Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code__c</fullName>
    <label>Employee Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>