force-app/main/default/objects/User/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S0</fullName>
            </value>
            <value>
                <fullName>S1</fullName>
            </value>
            <value>
                <fullName>S2</fullName>
            </value>
            <value>
                <fullName>S3</fullName>
            </value>
            <value>
                <fullName>E1</fullName>
            </value>
            <value>
                <fullName>E2</fullName>
            </value>
            <value>
                <fullName>E3</fullName>
            </value>
            <value>
                <fullName>E4</fullName>
            </value>
            <value>
                <fullName>M1</fullName>
            </value>
            <value>
                <fullName>M2</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>M4</fullName>
            </value>
            <value>
                <fullName>M5</fullName>
            </value>
            <value>
                <fullName>M6</fullName>
            </value>
            <value>
                <fullName>M7</fullName>
            </value>
            <value>
                <fullName>M8 &amp; Above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>