force-app/main/default/objects/User/fields/Related_To_Business__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Business__c</fullName>
    <label>Related To Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>